# sdui

./: .gitignore  .ocamlformat  CLAUDE.md  base64_image.ml  base64_image.mli  constants.ml  custom_form_elements.ml  custom_form_elements.mli  dune  dune-project  gallery.ml  gallery.mli  host.sh  index.html  main.bc.js  main.ml  parameters.ml  parameters.mli  preview.ml  preview.mli  progress.ml  readme.md  request_queue.ml  request_queue.mli  sdui.opam  sdui.opam.locked  setup_dev.sh  switch-metadata  todo.md  txt2img.ml  txt2img.mli  update.sh
api/: dune  (+40 more)
bonsai_web_components/: README.md  bonsai_web_components.opam
bonsai_web_components/accordion/src/: bonsai_web_ui_accordion.ml  bonsai_web_ui_accordion.mli  dune
bonsai_web_components/accordion/test/: bonsai_web_ui_accordion_test.ml  dune
bonsai_web_components/auto_generated/src/: bonsai_web_ui_auto_generated.ml  bonsai_web_ui_auto_generated.mli  dune  render_form.ml
bonsai_web_components/auto_generated/test/: bonsai_web_ui_auto_generated_test.ml  dune  test_computation_shape.ml
bonsai_web_components/bonsai_codemirror/bindings/: codemirror.ml  codemirror.mli  custom_ojs_converter.ml  custom_ojs_converter.mli  dune  for_ppx.ml  for_ppx.mli
bonsai_web_components/bonsai_codemirror/read_only/: bonsai_web_ui_codemirror_read_only.ml  bonsai_web_ui_codemirror_read_only.mli  dune
bonsai_web_components/bonsai_codemirror/src/: bonsai_web_ui_codemirror.ml  bonsai_web_ui_codemirror.mli  dune  path_and_generation.ml  path_and_generation.mli
bonsai_web_components/bonsai_codemirror/test/: bonsai_web_ui_codemirror_test.ml  bonsai_web_ui_codemirror_test.mli  dune  helpers.ml  helpers.mli  test_completions.ml  test_editor.ml  test_path_and_generation.ml  test_path_and_generation.mli
bonsai_web_components/bonsai_codemirror/themes/: codemirror_themes.ml  codemirror_themes.mli  dune  vscode.js
bonsai_web_components/codemirror/: for_ocaml_bindings.js
bonsai_web_components/codemirror_themes/src/: basic-dark.js  basic-light.js  gruvbox-dark.js  material-dark.js  nord.js  solarized-dark.js  solarized-light.js
bonsai_web_components/common_components/: bonsai_web_ui_common_components.ml  bonsai_web_ui_common_components.mli  dune
bonsai_web_components/drag_and_drop/src/: bonsai_web_ui_drag_and_drop.ml  bonsai_web_ui_drag_and_drop.mli  dune
bonsai_web_components/drag_and_drop/test/: bonsai_web_ui_drag_and_drop_testing.ml  bonsai_web_ui_drag_and_drop_testing.mli  dune
bonsai_web_components/element_size_hooks/src/: bulk_size_tracker.ml  bulk_size_tracker.mli  dune  freeze.ml  position_tracker.ml  position_tracker.mli  resize_to_fit.ml  resizer.ml  scroll_tracker.ml  size_tracker.ml  size_tracker.mli  visibility_tracker.ml
bonsai_web_components/element_size_hooks/test/: bonsai_web_ui_element_size_hooks_testing.ml  bonsai_web_ui_element_size_hooks_testing.mli  dune
bonsai_web_components/extendy/src/: bonsai_web_ui_extendy.ml  bonsai_web_ui_extendy.mli  dune
bonsai_web_components/extendy/test/: bonsai_web_ui_extendy_test.ml  dune
bonsai_web_components/file/from_web_file/: bonsai_web_ui_file_from_web_file.ml  dune
bonsai_web_components/file/src/: bonsai_web_ui_file.ml  bonsai_web_ui_file.mli  dune
bonsai_web_components/file/test/: dune  test_bonsai_web_ui_file.ml
bonsai_web_components/form/src/: dune  elements_automatic.ml  elements_automatic.mli  elements_manual.ml  elements_manual.mli  form_automatic.ml  form_automatic.mli  form_manual.ml  form_manual.mli  record_builder_intf.ml  typed_automatic.ml  typed_automatic.mli  typed_elements_manual.ml  typed_elements_manual.mli  typed_manual.ml  typed_manual.mli
bonsai_web_components/form/test/: bonsai_web_ui_form_automatic_test.ml  dune  (+4 more)
bonsai_web_components/scrolls_utilities/: dune
bonsai_web_components/tailwind_colors/: dune  tailwind_colors.ml  tailwind_colors.mli
bonsai_web_components/tree_layout/: bonsai_web_ui_tree_layout.ml  dune
bonsai_web_components/visibility/: bonsai_web_ui_visibility.ml  bonsai_web_ui_visibility.mli  dune
chain/: chain.ml  chain.mli  dune  effect_utils.mli  file_data_url.ml  file_data_url.mli  file_upload_zone.ml  file_upload_zone.mli  first_image.ml  first_image.mli  inc.ml  inc.mli  job_queue.ml  job_queue.mli  lease_pool.ml  lease_pool.mli  lease_pool_small_viz.ml  lease_pool_small_viz.mli  paint.ml  paint.mli  pair.ml  pair.mli  parameters.ml  parameters.mli  problem.ml  problem2.ml  route.mli  sd_chain.ml  single.ml  single.mli  skip.ml  snips.mli  worker.ml  worker.mli  worker2.ml  worker2.mli  worker_pool.ml  worker_pool.mli  worker_pool2.ml  workspace.ml
chain/js/: index.html  index.js
comp/: CLAUDE.md  comp.ml  dune
evolve/: CLAUDE.md  dune  evolve.ml  image_tree.ml  image_tree.mli  img2img_screen.ml  img2img_screen.mli  resize_screen.ml  resize_screen.mli  state_tree.ml  txt2img_screen.ml  txt2img_screen.mli
sd/: alwayson_scripts.ml  alwayson_scripts.mli  base64_image.ml  base64_image.mli  constants.ml  custom_form_elements.ml  custom_form_elements.mli  dune  gallery.ml  gallery.mli  gallery2.ml  gallery2.mli  hosts.ml  hosts.mli  image.ml  image.mli  img2img.ml  img2img.mli  models.ml  models.mli  parameters.ml  parameters.mli  preview.ml  preview.mli  progress.ml  progress.mli  request_queue.ml  request_queue.mli  samplers.ml  samplers.mli  samplers_request.ml  sd.ml  sd.mli  styles.ml  styles.mli  txt2img.ml  txt2img.mli  upscaler.ml  upscaler.mli
swipe/: CLAUDE.md  dune  swipe.ml  swipe.mli  swiper.ml  swiper.mli  tapper.ml  tapper.mli  txt2img_screen.ml  txt2img_screen.mli  visibility_attr.ml  visibility_attr.mli
txt/: dune  helpers.ml  helpers.mli  prompt.ml  prompt.mli  tree.ml  txt.ml  websocket.ml  websocket.mli
ui/: CLAUDE.md  chain.ml  chain.mli  dune  effect_utils.ml  first_image.ml  first_image.mli  inc.ml  inc.mli  lease_pool.ml  lease_pool.mli  lease_pool_small_viz.ml  lease_pool_small_viz.mli  navigation.ml  navigation.mli  paint.ml  paint.mli  parameters.ml  parameters.mli  route.ml  route.mli  sd_chain.ml  single.ml  single.mli  skip.ml  workspace.ml  workspace.mli
ui/js/: CLAUDE.md  index.js
(+203 files in other folders)
