opam-version: "2.0"
synopsis: "A frontend for the 1111 stable-diffusion API"
description: "TODO: write a longer description"
maintainer: ["Ty Overby"]
authors: ["Ty Overby"]
license: "LICENSE"
homepage: "https://github.com/TyOverby/sdui"
doc: "https://github.com/TyOverby/sdui"
bug-reports: "https://github.com/TyOverby/sdui/issues"
depends: [
  "ocaml"
  "dune" {>= "3.7"}
  "bonsai"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/TyOverby/sdui.git"
