(library
 (name sd_chain)
 (libraries
  shared
  bonsai.web
  async_js
  yojson
  sd
  bonsai.web_ui_form
  bonsai.vdom_node_with_map_children
  bonsai.kado
  bonsai.web_ui_widget
  virtual_dom.svg
  bonsai.feather_icon)
 (js_of_ocaml
  (javascript_files ./js/index.js))
 (preprocess
  (pps
   ppx_jane
   js_of_ocaml-ppx
   ppx_css
   ppx_typed_fields
   ppx_yojson_conv
   bonsai.ppx_bonsai)))
