(library
 (name comp)
 (libraries
  shared
  bonsai_web
  sd
  canvas2d
  async_js
  bonsai_web_components.web_ui_form
  bonsai_web_components.web_ui_reorderable_list
  bonsai_web.kado
  virtual_dom.svg
  bonsai_web_components.feather_icon)
 (preprocess
  (pps
   ppx_jane
   js_of_ocaml-ppx
   ppx_css
   ppx_typed_fields
   ppx_yojson_conv
   bonsai.ppx_bonsai)))
