(library
 (name evolve)
 (libraries
  shared
  bonsai.web
  sd
  sd_chain
  canvas2d
  async_js
  bonsai.web_ui_form
  bonsai.vdom_node_with_map_children
  bonsai.web_ui_reorderable_list
  bonsai.kado
  virtual_dom.svg
  bonsai.feather_icon)
 (preprocess
  (pps
   ppx_jane
   js_of_ocaml-ppx
   ppx_css
   ppx_typed_fields
   ppx_yojson_conv
   bonsai.ppx_bonsai)))
