(library
 (name txt)
 (libraries
  bonsai.web
  async_js
  shared
  bignum
  yojson
  bonsai.web_ui_form
  bonsai.feather_icon
  bonsai.vdom_node_with_map_children
  bonsai.kado
  virtual_dom.svg)
 (preprocess
  (pps
   ppx_jane
   js_of_ocaml-ppx
   ppx_css
   ppx_typed_fields
   ppx_yojson_conv
   bonsai.ppx_bonsai)))
