(library
 (name bonsai_web_ui_auto_generated)
 (public_name bonsai_web_components.web_ui_auto_generated)
 (preprocess
  (pps bonsai.ppx_bonsai ppx_css ppx_jane))
 (libraries bonsai bonsai.extra bonsai_web bonsai_web_ui_form
   bonsai_web.ui_form_view core ordinal_abbreviation sexplib0
   virtual_dom.css_gen sexp_grammar virtual_dom.input_widgets)
 (flags :standard -alert -private_bonsai_view_library))
