(library
 (name codemirror_themes)
 (public_name bonsai_web_components.codemirror_themes)
 (js_of_ocaml
  (javascript_files ../../../codemirror_themes/src/basic-dark.js
    ../../../codemirror_themes/src/basic-light.js
    ../../../codemirror_themes/src/gruvbox-dark.js
    ../../../codemirror_themes/src/material-dark.js
    ../../../codemirror_themes/src/nord.js
    ../../../codemirror_themes/src/solarized-dark.js
    ../../../codemirror_themes/src/solarized-light.js ./vscode.js))
 (libraries codemirror core ppx_typed_fields.typed_variants_lib
   bonsai_web.ui_view gen_js_api js_of_ocaml)
 (preprocess
  (pps ppx_jane bonsai.ppx_bonsai ppx_typed_fields)))
