(library
 (name bonsai_web_ui_gallery)
 (public_name bonsai_web_components.web_ui_gallery)
 (preprocess
  (pps bonsai.ppx_bonsai ppx_css ppx_jane js_of_ocaml-ppx))
 (libraries bonsai.extra bonsai_web bonsai_web_ui_codemirror
   bonsai_web_ui_form ppx_css.inline_css codemirror_themes core
   virtual_dom.vdom_test_helpers codemirror virtual_dom.css_gen gen_js_api
   bonsai_web.kado))

(rule
 (targets style.ml style.mli style__generated.ml style__generated.mli)
 (deps style.css)
 (action
  (bash "%{bin:css_inliner} %{deps} \"((rewrite ((cm-editor cm-editor))))\"")))
