(library
 (name bonsai_web_ui_popover)
 (public_name bonsai_web_components.web_ui_popover)
 (preprocess
  (pps js_of_ocaml-ppx ppx_jane bonsai.ppx_bonsai ppx_css))
 (libraries bonsai bonsai_web core virtual_dom.css_gen ppx_css.inline_css
   js_of_ocaml))

(rule
 (targets style.ml style.mli style__generated.ml style__generated.mli)
 (deps style.css)
 (action
  (bash "%{bin:css_inliner} %{deps} \"((rewrite ()))\"")))
