(library
 (name bonsai_web_ui_reorderable_list_test)
 (libraries bonsai_web_ui_reorderable_list bonsai_web bonsai_web_test
   bonsai_web_ui_drag_and_drop bonsai_web_ui_drag_and_drop_testing
   bonsai_web_ui_element_size_hooks_testing core virtual_dom.ui_effect)
 (preprocess
  (pps ppx_jane bonsai.ppx_bonsai)))
