(library
 (name dygraph)
 (preprocess
  (pps ppx_jane js_of_ocaml-ppx gen_js_api.ppx bonsai.ppx_bonsai
    ppx_pattern_bind))
 (js_of_ocaml
  (javascript_files ../dist/dygraph.min.js ../dist/lodash_merge.js))
 (libraries base bonsai.extra bonsai_web bonsai_web_ui_low_level_vdom core
   virtual_dom.css_gen gen_js_api js_of_ocaml ppx_css.inline_css
   virtual_dom.ui_effect))
